# cnc-stummel

./: .gitignore  README.md
configuration/scripts/: stummel-setup.sh
etc/: Drive.conf  Globals.conf  ProcessManaging.conf  StummelWorldModel.conf
etc/Misc/: taskrepository.tsk
stummel_base/: CMakeLists.txt  package.xml
stummel_base/include/: Base.h
stummel_base/src/: Base.cpp
stummel_expressions/: CMakeLists.txt  package.xml
stummel_expressions/autogenerated/include/: DomainBehaviour.h  DomainCondition.h  Stop1571238310927.h  StummelMaster1570634167988.h  StummelMaster1571241152555.h  Test1571239990055.h
stummel_expressions/autogenerated/include/Behaviours/: DriveToHallway.h  DriveToHallway1573055349775.h  DriveToKitchen.h  DriveToKitchen1573055193593.h  DriveToLab.h  DriveToLab1573055161416.h  DriveToOffices.h  DriveToOffices1573055365185.h  Stop.h  Stop1571238310927.h
stummel_expressions/autogenerated/include/Exploration/: Explore1571239218685.h  Explore1571241166731.h
stummel_expressions/autogenerated/include/Exploration/constraints/: Explore1571239218685Constraints.h
stummel_expressions/autogenerated/include/Plans/: Explore.h  Explore1530109132931.h  ExploreMaster1530108941003.h  Joystick.h
stummel_expressions/autogenerated/include/Plans/TestPlans/: TestJoystickMaster1531320805154.h
stummel_expressions/autogenerated/include/Plans/TestPlans/constraints/: TestJoystickMaster1531320805154Constraints.h
stummel_expressions/autogenerated/include/Plans/constraints/: Explore1530109132931Constraints.h  ExploreMaster1530108941003Constraints.h
stummel_expressions/autogenerated/src/: BehaviourCreator.cpp  ConditionCreator.cpp  ConstraintCreator.cpp  DomainBehaviour.cpp  DomainCondition.cpp  Stop1571238310927.cpp  StummelMaster1570634167988.cpp  StummelMaster1571241152555.cpp  Test1571239990055.cpp  UtilityFunctionCreator.cpp
stummel_expressions/autogenerated/src/Behaviours/: DriveToHallway.cpp  DriveToHallway1573055349775.cpp  DriveToKitchen.cpp  DriveToKitchen1573055193593.cpp  DriveToLab.cpp  DriveToLab1573055161416.cpp  DriveToOffices.cpp  DriveToOffices1573055365185.cpp  Stop.cpp  Stop1571238310927.cpp
stummel_expressions/autogenerated/src/Behaviours/constraints/: DriveToHallway1573055349775Constraints.cpp  DriveToKitchen1573055193593Constraints.cpp  DriveToLab1573055161416Constraints.cpp  DriveToOffices1573055365185Constraints.cpp  Stop1571238310927Constraints.cpp
stummel_expressions/autogenerated/src/Exploration/: Explore1571239218685.cpp  Explore1571241166731.cpp
stummel_expressions/autogenerated/src/Exploration/constraints/: Explore1571239218685Constraints.cpp  Explore1571241166731Constraints.cpp
stummel_expressions/autogenerated/src/Plans/: Explore.cpp  Explore1530109132931.cpp  ExploreMaster1530108941003.cpp  Joystick.cpp
stummel_expressions/autogenerated/src/Plans/TestPlans/: TestJoystickMaster1531320805154.cpp
stummel_expressions/autogenerated/src/Plans/TestPlans/constraints/: TestJoystickMaster1531320805154Constraints.cpp
stummel_expressions/autogenerated/src/Plans/constraints/: Explore1530109132931Constraints.cpp  ExploreMaster1530108941003Constraints.cpp
stummel_expressions/autogenerated/src/constraints/: Stop1571238310927Constraints.cpp  StummelMaster1570634167988Constraints.cpp  StummelMaster1571241152555Constraints.cpp  Test1571239990055Constraints.cpp
stummel_msgs/: CMakeLists.txt  package.xml
stummel_udp_proxy/: CMakeLists.txt  package.xml  relayMsgs.conf
stummel_udp_proxy/proxy_gen/: WrappedMessageHandler.cpp  ros2udpProxy.cpp
stummel_worldmodel/: CMakeLists.txt  package.xml
stummel_worldmodel/include/stummel/: StummelWorldModel.h
stummel_worldmodel/include/stummel/wm/: Communication.h  RawSensorData.h
stummel_worldmodel/src/stummel/: StummelWorldModel.cpp
stummel_worldmodel/src/stummel/wm/: Communication.cpp  RawSensorData.cpp
(+26 files in other folders)
