<?xml version="1.0"?>
<package>
  <name>stummel_expressions</name>
  <version>0.0.0</version>
  <description>The stummel_expressions package</description>

  <maintainer email="info@das-lab.net">Carpe Noctem</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>stummel_worldmodel</build_depend>
  <build_depend>alica_engine</build_depend>
  <build_depend>system_config</build_depend>
  <build_depend>autodiff</build_depend>
  <build_depend>system_util</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>stummel_worldmodel</run_depend>
  <run_depend>alica_engine</run_depend>
  <run_depend>system_config</run_depend>
  <run_depend>autodiff</run_depend>
  <run_depend>system_util</run_depend>

  <export>
  </export>
</package>

