<?xml version="1.0"?>
<package format="2">
  <name>stummel_udp_proxy</name>
  <version>0.0.0</version>
  <description>The stummel_udp_proxy package</description>

  <maintainer email="info@das-lab.net">Carpe Noctem Cassel</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>process_manager</depend>
  <depend>roslib</depend>
  <depend>system_config</depend>
  <depend>alica_msgs</depend>
  <depend>udp_proxy_generator</depend>
  <depend>alica_ros_proxy</depend>

</package>
